appnews/src/main/java/com/example/appnews/web/errors/ErrorUpdateRemoveNewsResponse.java
package com.example.appnews.web.errors;

import lombok.Data;

@Data
public class ErrorUpdateRemoveNewsResponse {
    private String title;
    private String nikName;
    private String messages;
}
